style:fix main overflow

--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,7 @@ body{
 
 footer{
     background-color: #222222;
-    min-height: 8vh;
+    height: 59px;
 }
 
 /* ?utils */
@@ -24,6 +24,7 @@ footer{
 .flex{
     display: flex;
 }
+
 .container{
     max-width: 1180px;
     margin-left: auto;
@@ -51,7 +52,9 @@ footer{
 .grid-icon span{
     color: white;
     font-size: 15px;
-    padding-right: 3px ;
+    padding-right: 3px;
+    display: inline-block;
+    vertical-align: text-top;
 }
 
 .arrow i{
@@ -74,7 +77,7 @@ footer{
 /* !main */
 
 main{
-    height: calc(100vh - 8vh);
+    height: calc(100vh - 90px);
     overflow: auto;
 }
 
@@ -163,7 +166,6 @@ main{
 
 .footer-center{
     display: flex;
-    margin-left: 10px;
 }
 
 #angle{
